Fix overflowing content on small screens

--- a/src/components/App/style.module.css
+++ b/src/components/App/style.module.css
@@ -1,6 +1,6 @@
 .app {
     max-width: 540px;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
